invisible scrollbar fix

--- a/style.css
+++ b/style.css
@@ -101,17 +101,18 @@ p {
 
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 0; 
+    background: transparent;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    background: #bcbbbba6;
+    background: #060015a6;
 }
   
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #0b003590;
 }
 
 /* Handle on hover */
